fixed spacing

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ img {
 }
 
 .forecast-item {
-  background-color: rgba(255, 255, 255, 0.8); 
+  background-color:transparent; 
   border-radius: 8px;
   padding: 15px;
   text-align: center;
